--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -782,6 +782,10 @@ section[role="main"] .view-article {
   width: 199px;
   height: 212px;
   display: block;
+  margin: 40px 38px 0 0;
+}
+
+.insights .custom-fancybox-wrapper ul li a {
   margin: 40px 19px 0 19px;
 }
 
