Setting a min height on leaders.

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -765,6 +765,7 @@ section[role="main"] .view-article {
   width: 199px;
   margin: 40px 19px 0 19px;
   line-height: 22px;
+  min-height: 300px;
 }
 
 /* Removing as its causing layout issues with isotope
