Removed padding on wrap of explore section for responsive

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3582,7 +3582,10 @@ span.insight-category-popout {
    .slider p {
      font-size: 1.8em;
    }
-
+   
+   section[role="explore"] .wrap {
+     padding: 0px;
+   }
 }
 
 @media only screen and (max-width:320px) {
