--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3121,6 +3121,7 @@ p a.imgpartners:nth-child(4) img {
 
 .easingsliderpro-arrows {
 	top:45% !important;
+	z-index: 1;
 }
 
 /* END EASING SLIDER */
