center 2 column sections on newsroom for responsive

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3407,6 +3407,12 @@ span.insight-category-popout {
     float: none;
     margin: 30px 20px 0 20px !important;
   }
+  
+  .newsroom .columns2 {
+    text-align: center;
+    float: none;
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width:930px) {
