Changed h5 font from robotolight to robotothin

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -352,7 +352,7 @@ section[role="customers"] h3,section[role="rr-number"] h3 {
 
 section[role="about-us"] h5 {
 	color:#667280;
-	font-family:robotolight;
+	font-family:robotothin;
 	font-size:30px;
 	margin-bottom:30px;
 	text-align:center;
