--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -36,6 +36,7 @@ body {
 	font:300 11px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color:#667280;
 	border-top: 4px solid #990101;
+	min-width: 320px;
 }
 
 h1, h2, h3, h4, h5, h6 {font-weight: normal; font-style: normal;}
