Adding back admin panel. Fixing the jcarousel slider on the homepage.

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1363,7 +1363,11 @@ header .icons {
 /* trusted */
 
 section[role="trusted"] .wrap ul {	
-	margin: 0 auto;    overflow: hidden;    padding-left: 20px;    width: 100% !important;
+	margin: 0 auto;    overflow: hidden;    padding-left: 20px;    
+/*  
+!important causing jcarousel issues homepage client slider
+width: 100% !important;*/
+  width: 100%;
 }
 section[role="trusted"] .wrap ul li {	
 	float: left;    list-style: none outside none;    margin-left: 5px;    margin-right: 5px;    min-height: 89px;    min-width: 137px;}
@@ -3369,6 +3373,38 @@ span.insight-category-popout {
        -o-transition-duration: 0s;
           transition-duration: 0s;
 }
+
+
+/* Additional styles for the jcarousel controls. */						 
+
+/*.jcarousel-scroll {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.jcarousel-scroll form {
+    margin: 0;
+    padding: 0;
+}
+
+.jcarousel-scroll select {
+    font-size: 75%;
+}
+
+#mycarousel-next,
+#mycarousel-prev {
+    cursor: pointer;
+    margin-bottom: -10px;
+    text-decoration: underline;
+    font-size: 11px;
+}*/
+
+.jcarousel-skin-tango .jcarousel-clip-horizontal {
+  min-height: 90px !important;
+}
+
+/* Additional styles for the jcarousel controls. */	
+
 
 /* BEGIN MEDIA QUERIES */
 
