--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3111,6 +3111,10 @@ p a.imgpartners:nth-child(4) img {
   font-size: 4.9em;
 }
 
+.slider.verylong h1 {
+  font-size: 4.9em;
+}
+
 .slider p {
   position: relative;
   display: table-cell;
@@ -3468,6 +3472,10 @@ span.insight-category-popout {
   .slider.long .slider-content .inner-content {
      width: 70%;
    }
+   
+   .slider.verylong .slider-content .inner-content {
+      width: 70%;
+    }
   
     
   .slider.with-excerpt h1 {
@@ -3565,6 +3573,10 @@ span.insight-category-popout {
      font-size: 4.7em;
    }
    
+   .slider.verylong h1 {
+     font-size: 4.5em;
+   }
+   
    .slider p {
      font-size: 1.8em;
    }
@@ -3608,7 +3620,12 @@ span.insight-category-popout {
  
 }
 
-
+@media only screen and (max-width:480px) {
+  .slider.verylong h1 {
+     font-size: 3.8em;
+   }
+  
+}
 
 @media only screen and (max-width:400px) {
    section[role="about"] p,
@@ -3626,6 +3643,10 @@ span.insight-category-popout {
    
    .slider.long h1 {
      font-size: 4em;
+   }
+   
+   .slider.verylong h1 {
+     font-size: 3em;
    }
    .slider.with-excerpt h1 {
     /* line-height: 1.1em; */
