Removing search and contact us from mobile header

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2304,6 +2304,18 @@ display:block;
   .technology p.button a {
     display: block !important;
   }
+  
+  header .icons {
+    display: none;
+  }
+  
+  .logo {
+    margin: 8px 0 0 15px;
+  }
+  
+  .desplegar-menu {
+    top: 8px;
+  }
 }
 
 @media (max-width: 767px){
