--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3632,7 +3632,7 @@ span.insight-category-popout {
     }
     
    .category .slider h1.entry-title {
-     font-size: 3.0em;
+     font-size: 3em;
    }
    
    /*Responsive for dropdown filtering on insights page*/
@@ -3692,7 +3692,7 @@ span.insight-category-popout {
    }
    
    .slider.long h1 {
-     font-size: 4em;
+     font-size: 3.6em;
    }
    
    .slider.long.with-excerpt h1 {
@@ -3704,6 +3704,10 @@ span.insight-category-popout {
    }
    .slider.with-excerpt h1 {
     /* line-height: 1.1em; */
+   }
+   
+   .category .slider h1.entry-title {
+     font-size: 2.4em;
    }
 
    .slider p {
