--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3582,7 +3582,7 @@ span.insight-category-popout {
     padding: 0;
   }
   
-  .category .slider h1.entry-title {
+  .slider h1.entry-title.category-long {
     font-size: 4.9em;
   }
   
@@ -3646,7 +3646,7 @@ span.insight-category-popout {
       font-size: 5.0em;
     }
     
-   .category .slider h1.entry-title {
+   .slider h1.entry-title.category-long {
      font-size: 3.0em;
    }
    
@@ -3738,7 +3738,7 @@ span.insight-category-popout {
   .slider.long p {
     font-size: 1.6em;
   }
-  .category .slider h1.entry-title {
+  .slider h1.entry-title.category-long {
     font-size: 2.4em;
   }
 }
