Adding Insight filtering

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3396,6 +3396,14 @@ span.insight-category-popout {
   left: 507px;
 }
 
+#format a.selected {
+  background-color: #990101;
+}
+
+/*#format a.selected:hover {
+  background-color: #a3aab3;
+}*/
+
 .cat-item.selected {
   background: #667280;
 }
