Adding changes from dev for allowing the carousel on the uk page.

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -821,6 +821,7 @@ section[role="main"] .view-article {
   width: 199px;
   margin: 40px 20px 0 21px;
   line-height: 22px;
+  height: 300px;
 }
 
 /* Removing as its causing layout issues with isotope
