--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3323,14 +3323,17 @@ span.insight-category-popout {
   position: relative;
 }
 
-.filter-options span:first-child{
+.filter-options span:first-child {
   margin-left: 0px;
 }
-.filter-options{
+.filter-options {
   position:relative;
-  width: 712px;
+  width: 960px;
   margin: 0 auto;
   text-align: left;
+}
+
+.filter-outer-wrap {
 }
 
 .filter-options #format {
@@ -3398,11 +3401,11 @@ span.insight-category-popout {
 }
 
 #topic.option-set {
-  left: 201px;
+  left: 325px;
 }
 
 #region.option-set {
-  left: 455px;
+  left: 579px;
 }
 
 #format a.selected {
@@ -3432,7 +3435,7 @@ span.insight-category-popout {
 
 .topic-wrap {
   width: 244px;
-  margin-left: 147px;
+  margin-left: 271px;
 }
 
 #format.option-set {
