--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1437,7 +1437,7 @@ section[role="trusted"] .wrap ul li {
 
 
 
-.nav li .sub-menu li:hover ul{
+.nav li .sub-menu li:hover>ul{
 
 	display:block;	
 	z-index: 2;
@@ -3158,6 +3158,10 @@ p a.imgpartners:nth-child(4) img {
   height: 300px;
 }
 
+.slider.tall {
+  height: 450px;
+}
+
 /* END LEVEL ONE SLIDER DIV */
 
 /* BEGIN LEVEL TWO SLIDER DIV */
@@ -3171,6 +3175,11 @@ p a.imgpartners:nth-child(4) img {
 .slider.with-excerpt .slider-content {
   width: 910px;
 }
+
+.slider.tall .slider-content {
+  padding-bottom: 205px !important;
+}
+  
 
 /* END LEVEL TWO SLIDER DIV */
 
