--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3255,6 +3255,10 @@ div.caroufredsel_wrapper {
   font-size: 4.9em;
 }
 
+.slider h1.entry-title.category-long-wrap {
+  font-size: 5.8em;
+}
+
 .slider p {
   position: relative;
   display: table-cell;
@@ -3880,7 +3884,7 @@ span.insight-category-popout {
   
   .slider h1.entry-title.category-long-wrap {
     font-size: 4.9em;
-    width: 70%;
+    width: 85%;
     margin: 0 auto;
   }
   
