--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1597,6 +1597,19 @@ section[role="blog"] .post-content {
 
 }
 
+section[role="blog"] .post-content ul {
+  padding: 0;
+  margin: 0 0 24px 30px;
+
+}
+
+.single-post section[role="blog"] .post-content ul li {
+  list-style-type: disc;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 6px;
+}
+
 section[role="blog"] .day {
 
 	color: #dddfe3;
